--- a/app/src/main/res/layout/activity_add_template.xml
+++ b/app/src/main/res/layout/activity_add_template.xml
@@ -23,7 +23,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/message_txt"
+            android:id="@+id/template_plain_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
