--- a/app/src/main/res/layout/activity_template.xml
+++ b/app/src/main/res/layout/activity_template.xml
@@ -23,10 +23,11 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/template_add_txt"
+        android:id="@+id/template_add_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="Add" />
+        android:text="Add"
+        android:textAllCaps="false" />
 </LinearLayout>
