--- a/app/src/main/res/layout/template_item.xml
+++ b/app/src/main/res/layout/template_item.xml
@@ -6,7 +6,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/message_txt"
+        android:id="@+id/template_plain_txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Text View"
